--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,9 +5,14 @@
     <title><%= yield(:title) %></title>
   </head>
   <body>
+    <div class="center jumbotron">
     <h1>CAMS Rota Scheduler</h1>
     <p>
       This is the home page for the doctor rota sample application.
     </p>
+     <%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
+  </div>
+  <%= link_to image_tag("nhs.jpeg", alt: "NHS logo"),
+            'http://rubyonrails.org/' %>
   </body>
 </html>
