--- a/app/views/doctors/new.html.erb
+++ b/app/views/doctors/new.html.erb
@@ -1,5 +1,23 @@
-<h1>New Doctor</h1>
+<% provide(:title, 'Sign up') %>
+<h1>Sign up</h1>
 
-<%= render 'form', doctor: @doctor %>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <%= form_for(@doctor) do |f| %>
+      <%= f.label :name %>
+      <%= f.text_field :name %>
 
-<%= link_to 'Back', doctors_path %>
+      <%= f.label :email %>
+      <%= f.email_field :email %>
+
+      <%= f.label :password %>
+      <%= f.password_field :password %>
+
+      <%= f.label :password_confirmation, "Confirmation" %>
+
+      <%= f.password_field :password_confirmation %>
+
+      <%= f.submit "Create my account", class: "btn btn-primary" %>
+    <% end %>
+  </div>
+</div>
