--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,11 +2,11 @@
   <div class="container">
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Home",   '#' %></li>
-        <li><%= link_to "Help",   '#' %></li>
+        <li><%= link_to "Home",   '/' %></li>
+        <li><%= link_to "Help",   '/help' %></li>
         <li><%= link_to "Log in", '#' %></li>
-        <li><%= link_to "Doctors", '#' %></li>
-          <li><%= link_to "Locations", '#' %></li>
+        <li><%= link_to "Doctors", '/doctors' %></li>
+          <li><%= link_to "Locations", '/locations' %></li>
       </ul>
     </nav>
   </div>
