--- a/app/views/doctors/new.html.erb
+++ b/app/views/doctors/new.html.erb
@@ -3,7 +3,7 @@
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_for(@doctor) do |f| %>
+    <%= form_for(@doctor, url: signup_path) do |f| %>
       <%= render 'shared/error_messages' %>
 
       <%= f.label :name %>
