--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,9 @@
         <li><%= link_to "Home", root_path %></li>
         <li><%= link_to "Help", help_path %></li>
         <% if logged_in? %>
-          <li><%= link_to "Users", '#' %></li>
+          <li><%= link_to "Doctors", '/doctors' %></li>
+              <li><%= link_to "Locations", '/locations' %></li>
+                      <li><%= link_to "Rotas", '/rota' %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               Account <b class="caret"></b>
@@ -16,6 +18,7 @@
               <li><%= link_to "Settings", '#' %></li>
               <li><%= link_to "Doctors", '/doctors' %></li>
               <li><%= link_to "Locations", '/locations' %></li>
+              <li><%= link_to "Rota", '/rota' %></li>
               <li class="divider"></li>
               <li>
                 <%= link_to "Log out", logout_path, method: "delete" %>
