sorted signup button

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -13,7 +13,7 @@
     <p>
       This is the home page for the doctor rota sample application.
     </p>
-     <%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
+     <%= link_to "Sign up now!", '/signup', class: "btn btn-lg btn-primary" %>
   </div>
 
   </body>
