rota relationship with location working

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -181,3 +181,20 @@ input {
     color: $state-danger-text;
   }
 }
+
+.pagination {
+  .previous_page { background:#7777ff; color:white }
+  .previous_page.disabled { background: white; color: #777 }
+  .current { background: yellow }
+  .next_page { background: #7777ff; color: white }
+  .next_page.disabled { background: white; color: #777 }
+}
+
+.rdoctor {
+  padding: 10px;
+}
+
+  .rdate {
+    color: blue;
+    padding: 10px;
+}
