--- a/app/views/rota/index.html.erb
+++ b/app/views/rota/index.html.erb
@@ -1,14 +1,15 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Rota</h1>
-
+<%= will_paginate @rota %>
 <table>
   <thead>
     <tr>
-      <th>Date</th>
-      <th>1st on call day</th>
-      <th>1st on call nights</th>
-      <th>2nd on call</th>
+      <th class="rdoctor">Location</th>
+      <th class="rdoctor">Date</th>
+      <th class="rdoctor">1st on call day</th>
+      <th class="rdoctor">1st on call nights</th>
+      <th class="rdoctor">2nd on call</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,10 +17,11 @@
   <tbody>
     <% @rota.each do |rotum| %>
       <tr>
-        <td><%= rotum.Date %></td>
-        <td><%= rotum.First_on_call_day %></td>
-        <td><%= rotum.First_on_call_nights %></td>
-        <td><%= rotum.Second_on_call %></td>
+        <td class="rdate"><%= rotum.location.name if rotum.location %></td>
+        <td class="rdate"><%= rotum.Date %></td>
+        <td class="rdoctor"><%= rotum.First_on_call_day %></td>
+        <td class="rdoctor"><%= rotum.First_on_call_nights %></td>
+        <td class="rdoctor"><%= rotum.Second_on_call %></td>
         <td><%= link_to 'Show', rotum %></td>
         <td><%= link_to 'Edit', edit_rotum_path(rotum) %></td>
         <td><%= link_to 'Destroy', rotum, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -27,7 +29,7 @@
     <% end %>
   </tbody>
 </table>
-
+<%= will_paginate @rota %>
 <br>
 
 <%= link_to 'New Rotum', new_rotum_path %>
