--- a/app/views/rota/show.html.erb
+++ b/app/views/rota/show.html.erb
@@ -18,19 +18,19 @@
 <tr>
   <td>
   <strong>1st on call day:</strong>
-  <%= @rotum.doctor.First_on_call_day_id %>
+  <%= @rotum.First_on_call_day.name %>
 </td>
 </tr>
 <tr>
   <td>
   <strong>1st on call nights:</strong>
-  <%= @rotum.First_on_call_nights_id %>
+  <%= @rotum.First_on_call_nights.name %>
   </td>
 </tr>
 <tr>
   <td>
   <strong>2nd on call:</strong>
-  <%= @rotum.Second_on_call_id %>
+  <%= @rotum.Second_on_call.name %>
 </td>
 </tr>
 
