Added day and sorted Doctors page

--- a/app/views/doctors/_form.html.erb
+++ b/app/views/doctors/_form.html.erb
@@ -21,6 +21,13 @@
     <%= f.text_field :email %>
   </div>
 
+  <div class="field">
+    <%= f.label :consultant%>
+    <%= f.select :consultant, ['True','False'] %>
+  </div>
+
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
