--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -22,5 +22,10 @@
   <%= @doctor.email %>
 </p>
 
+<p>
+  <strong>Consultant:</strong>
+  <%= @doctor.consultant %>
+</p>
+
 <%= link_to 'Edit', edit_doctor_path(@doctor) %> |
 <%= link_to 'Back', doctors_path %>
