--- a/app/views/rota/show.html.erb
+++ b/app/views/rota/show.html.erb
@@ -33,6 +33,12 @@
   <%= @rotum.Second_on_call.name %>
 </td>
 </tr>
+<tr>
+  <td>
+  <strong>Consultant:</strong>
+  <%= @rotum.Consultant.name %>
+</td>
+</tr>
 
 </table>
 </div>
