--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -1,12 +1,13 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Doctors</h1>
-
-<table>
+<div class="container">
+<table class="table table-striped">
   <thead>
     <tr>
       <th>Name</th>
       <th>Email</th>
+      <th>Consultant</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,6 +17,7 @@
       <tr>
         <td><%= doctor.name %></td>
         <td><%= doctor.email %></td>
+        <td><%= doctor.consultant %></td>
         <td><%= link_to 'Show', doctor %></td>
         <td><%= link_to 'Edit', edit_doctor_path(doctor) %></td>
         <td><%= link_to 'Destroy', doctor, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -23,6 +25,7 @@
     <% end %>
   </tbody>
 </table>
+</div>
 
 <br>
 
