--- a/app/views/doctors/new.html.erb
+++ b/app/views/doctors/new.html.erb
@@ -12,6 +12,10 @@
       <%= f.label :email %>
       <%= f.email_field :email, class: 'form-control' %>
 
+      <%= f.label :consultant %>
+      <%= f.select :consultant, ['True','False'] %>
+
+
       <%= f.label :password %>
       <%= f.password_field :password, class: 'form-control' %>
 
