--- a/app/views/rota/index.html.erb
+++ b/app/views/rota/index.html.erb
@@ -9,9 +9,11 @@
     <tr>
       <th class="rdoctor">Location</th>
       <th class="rdoctor">Date</th>
+      <th class="rdoctor">Day</th>
       <th class="rdoctor">1st on call day</th>
       <th class="rdoctor">1st on call nights</th>
       <th class="rdoctor">2nd on call</th>
+        <th class="rdoctor">Consultant</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -21,9 +23,11 @@
       <tr>
         <td class="rdate"><%= rotum.location.name if rotum.location %></td>
         <td class="rdate"><%= rotum.Date %></td>
-        <td class="rdoctor"><%= rotum.First_on_call_day.name %></td>
-        <td class="rdoctor"><%= rotum.First_on_call_nights.name %></td>
-        <td class="rdoctor"><%= rotum.Second_on_call.name %></td>
+        <td class="rdate"><%= rotum.Date.strftime("%a") %></td>
+        <td class="rdoctor"><%= rotum.First_on_call_day.name if rotum.First_on_call_day %></td>
+        <td class="rdoctor"><%= rotum.First_on_call_nights.name if rotum.First_on_call_nights %></td>
+        <td class="rdoctor"><%= rotum.Second_on_call.name if rotum.Second_on_call %></td>
+        <td class="rdoctor"><%= rotum.Consultant.name if rotum.Consultant  %></td>
         <td><%= link_to 'Show', rotum %></td>
         <td><%= link_to 'Edit', edit_rotum_path(rotum) %></td>
         <td><%= link_to 'Destroy', rotum, method: :delete, data: { confirm: 'Are you sure?' } %></td>
