--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -2,7 +2,8 @@
 
 <h1>Locations</h1>
 
-<table>
+<div class="container">
+<table class="table table-striped">
   <thead>
     <tr>
       <th>Name</th>
@@ -21,6 +22,7 @@
     <% end %>
   </tbody>
 </table>
+</div>
 
 <br>
 
