--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -1,11 +1,11 @@
 <p id="notice"><%= notice %></p>
 
+<div class="container">
 <p>
   <strong>Name:</strong>
   <%= @location.name %>
 </p>
-
-
+</div>
 
 <%= link_to 'Edit', edit_location_path(@location) %> |
 <%= link_to 'Back', locations_path %>
