--- a/app/views/rota/index.html.erb
+++ b/app/views/rota/index.html.erb
@@ -9,7 +9,6 @@
     <tr>
       <th class="rdoctor">Location</th>
       <th class="rdoctor">Date</th>
-      <th class="rdoctor">Day</th>
       <th class="rdoctor">1st on call day</th>
       <th class="rdoctor">1st on call nights</th>
       <th class="rdoctor">2nd on call</th>
@@ -22,8 +21,7 @@
     <% @rota.each do |rotum| %>
       <tr>
         <td class="rdate"><%= rotum.location.name if rotum.location %></td>
-        <td class="rdate"><%= rotum.Date %></td>
-        <td class="rdate"><%= rotum.Date.strftime("%a") %></td>
+        <td class="rdate"><%= rotum.Date.strftime("%a %d %b %y") %></td>
         <td class="rdoctor"><%= rotum.First_on_call_day.name if rotum.First_on_call_day %></td>
         <td class="rdoctor"><%= rotum.First_on_call_nights.name if rotum.First_on_call_nights %></td>
         <td class="rdoctor"><%= rotum.Second_on_call.name if rotum.Second_on_call %></td>
@@ -39,5 +37,9 @@
 <div>
 
 <br>
-
+<p>
 <%= link_to 'New Rota', new_rotum_path %>
+</p>
+<p>
+<%= link_to 'Create 30 days', new_30days_path %>
+</p>
