--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -6,8 +6,13 @@
   <thead>
     <tr>
       <th>Name</th>
-      <th>Email</th>
+
       <th>Consultant</th>
+        <th>Email</th>
+        <th>Mobile</th>
+        <th>Preference</th>
+        <th>Group</th>
+
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,7 +21,6 @@
     <% @doctors.each do |doctor| %>
       <tr>
         <td><%= doctor.name %></td>
-        <td><%= doctor.email %></td>
         <td>
           <% if doctor.consultant? %>
           <%= link_to image_tag("consultant.png", alt: "consultant", size: "20") %>
@@ -24,6 +28,11 @@
           <%= link_to image_tag("spr.png", alt: "spr", size: "20") %>
           <% end %>
           </td>
+        <td><%= doctor.email %></td>
+        <td><%= doctor.mobile %></td>
+        <td><%= doctor.contact_preference %></td>
+        <td><%= doctor.notification_group %></td>
+
         <td><%= link_to 'Show', doctor %></td>
         <td><%= link_to 'Edit', edit_doctor_path(doctor) %></td>
         <td><%= link_to 'Destroy', doctor, method: :delete, data: { confirm: 'Are you sure?' } %></td>
