--- a/app/views/rota/index.html.erb
+++ b/app/views/rota/index.html.erb
@@ -10,9 +10,13 @@
       <th class="rdoctor">Location</th>
       <th class="rdoctor">Date</th>
       <th class="rdoctor">1st on call day</th>
+      <th class="rdoctor"><%= link_to image_tag("market.png", alt: "market", size: "20") %></th>
       <th class="rdoctor">1st on call nights</th>
+      <th class="rdoctor"><%= link_to image_tag("market.png", alt: "market", size: "20") %></th>
       <th class="rdoctor">2nd on call</th>
-        <th class="rdoctor">Consultant</th>
+      <th class="rdoctor"><%= link_to image_tag("market.png", alt: "market", size: "20") %></th>
+      <th class="rdoctor">Consultant</th>
+      <th class="rdoctor"><%= link_to image_tag("market.png", alt: "market", size: "20") %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -23,9 +27,25 @@
         <td class="rdate"><%= rotum.location.name if rotum.location %></td>
         <td class="rdate"><%= rotum.Date.strftime("%a %d %b %y") %></td>
         <td class="rdoctor"><%= rotum.First_on_call_day.name if rotum.First_on_call_day %></td>
+        <td class="rdoctor">
+    <% if rotum.First_on_call_day_trade? %>
+    <%= link_to image_tag("market.png", alt: "trade", size: "20") %>
+  <% end %></td>
         <td class="rdoctor"><%= rotum.First_on_call_nights.name if rotum.First_on_call_nights %></td>
+        <td class="rdoctor">
+<% if rotum.First_on_call_nights_trade? %>
+<%= link_to image_tag("market.png", alt: "trade", size: "20") %>
+<% end %></td>
         <td class="rdoctor"><%= rotum.Second_on_call.name if rotum.Second_on_call %></td>
+        <td class="rdoctor">
+<% if rotum.Second_on_call_trade? %>
+<%= link_to image_tag("market.png", alt: "trade", size: "20") %>
+<% end %></td>
         <td class="rdoctor"><%= rotum.Consultant.name if rotum.Consultant  %></td>
+        <td class="rdoctor">
+  <% if rotum.Consultant_trade? %>
+  <%= link_to image_tag("market.png", alt: "trade", size: "20") %>
+  <% end %></td>
         <td><%= link_to 'Show', rotum %></td>
         <td><%= link_to 'Edit', edit_rotum_path(rotum) %></td>
         <td><%= link_to 'Destroy', rotum, method: :delete, data: { confirm: 'Are you sure?' } %></td>
