changed rota form to natural language

--- a/app/views/rota/index.html.erb
+++ b/app/views/rota/index.html.erb
@@ -10,13 +10,17 @@
       <th class="rdoctor">Location</th>
       <th class="rdoctor">Date</th>
       <th class="rdoctor">1st on call day</th>
-      <th class="rdoctor"><%= link_to image_tag("market.png", alt: "market", size: "20") %></th>
+      <!-- <th class="rdoctor"><%= link_to image_tag("market.png", alt: "market", size: "20") %></th> -->
+<th></th>
       <th class="rdoctor">1st on call nights</th>
-      <th class="rdoctor"><%= link_to image_tag("market.png", alt: "market", size: "20") %></th>
+      <!-- <th class="rdoctor"><%= link_to image_tag("market.png", alt: "market", size: "20") %></th> -->
+<th></th>
       <th class="rdoctor">2nd on call</th>
-      <th class="rdoctor"><%= link_to image_tag("market.png", alt: "market", size: "20") %></th>
+      <!-- <th class="rdoctor"><%= link_to image_tag("market.png", alt: "market", size: "20") %></th> -->
+<th></th>
       <th class="rdoctor">Consultant</th>
-      <th class="rdoctor"><%= link_to image_tag("market.png", alt: "market", size: "20") %></th>
+      <!-- <th class="rdoctor"><%= link_to image_tag("market.png", alt: "market", size: "20") %></th> -->
+<th></th>
       <th colspan="3"></th>
     </tr>
   </thead>
