--- a/app/views/doctors/_form.html.erb
+++ b/app/views/doctors/_form.html.erb
@@ -23,7 +23,7 @@
 
   <div class="field">
     <%= f.label :consultant %>
-    <%= f.select :consultant, ['True','False'] %>
+    <%= f.select :consultant, ['true','false'] %>
   </div>
 
   <div class="field">
@@ -33,7 +33,7 @@
 
   <div class="field">
     <%= f.label :mobile %>
-    <%= f.text_field :mobile %> %>
+    <%= f.text_field :mobile %>
   </div>
 
   <div class="field">
