--- a/app/views/rota/_form.html.erb
+++ b/app/views/rota/_form.html.erb
@@ -14,52 +14,46 @@
 
 <div class="field">
    <%= f.label "Location" %>
-   <%= f.collection_select(:location_id, Location.all, :id, :name) %>
+   <%= f.collection_select(:location_id, Location.all, :id, :name,{}, {:style => "width:200px"}) %>
  </div>
 
   <div class="field">
     <%= f.label :Date %>
-    <%= f.date_select :Date %>
+    <%= f.date_select :Date,{}, {:style => "width:100px"} %>
   </div>
 
   <div class="field">
     <%= f.label :First_on_call_day %>
-    <%= f.collection_select(:First_on_call_day_id, Doctor.all, :id, :name) %>
-  </div>
+    <%= f.collection_select(:First_on_call_day_id, Doctor.all, :id, :name,{}, {:style => "width:300px"}) %>
 
-  <div class="field">
+ <!-- <%= label_tag(:First_on_call_day_trade, "Trade session") %>
+<%= radio_button_tag(:First_on_call_day_trade, 'true') %>
+<%= label_tag(:First_on_call_day_trade, "Trade session") %>
+<%= radio_button_tag(:First_on_call_day_trade, 'false') %> -->
+
     <%= f.label :First_on_call_day_trade %>
-    <%= f.select :First_on_call_day_trade, ['false','true'] %>
+    <!-- <%= f.select :First_on_call_day_trade, ['false','true'],{}, {:style => "width:100px"} %> -->
+<%= f.select :First_on_call_day_trade, options_for_select([['No','false'],['Yes','true']]),{}, {:style => "width:100px"} %>
   </div>
-
   <div class="field">
     <%= f.label :First_on_call_nights %>
-    <%= f.collection_select(:First_on_call_nights_id, Doctor.all, :id, :name) %>
-  </div>
-
-  <div class="field">
+    <%= f.collection_select(:First_on_call_nights_id, Doctor.all, :id, :name,{}, {:style => "width:300px"}) %>
     <%= f.label :First_on_call_nights_trade %>
-    <%= f.select :First_on_call_nights_trade, ['false','true'] %>
+    <%= f.select :First_on_call_nights_trade, options_for_select([['No','false'],['Yes','true']]),{}, {:style => "width:100px"} %>
   </div>
 
   <div class="field">
     <%= f.label :Second_on_call %>
-    <%= f.collection_select(:Second_on_call_id, Doctor.all, :id, :name) %>
-  </div>
-
-  <div class="field">
+    <%= f.collection_select(:Second_on_call_id, Doctor.all, :id, :name,{}, {:style => "width:300px"}) %>
     <%= f.label :Second_on_call_trade %>
-    <%= f.select :Second_on_call_trade, ['false','true'] %>
+    <%= f.select :Second_on_call_trade, options_for_select([['No','false'],['Yes','true']]),{}, {:style => "width:100px"} %>
   </div>
 
   <div class="field">
     <%= f.label :Consultant %>
-    <%= f.collection_select(:Consultant_id, Doctor.where('consultant = ?',true), :id, :name) %>
-  </div>
-
-  <div class="field">
+    <%= f.collection_select(:Consultant_id, Doctor.where('consultant = ?',true), :id, :name,{}, {:style => "width:300px"}) %>
     <%= f.label :Consultant_trade %>
-    <%= f.select :Consultant_trade, ['false','true'] %>
+    <%= f.select :Consultant_trade, options_for_select([['No','false'],['Yes','true']]),{}, {:style => "width:100px"} %>
   </div>
 
   <div class="actions">
