sorted out add rota redirect and spacing

--- a/app/views/rota/index.html.erb
+++ b/app/views/rota/index.html.erb
@@ -59,8 +59,6 @@
 </table>
 <%= will_paginate @rota %>
 <div>
-
-<br>
-<p>
-<%= link_to 'New Rota', new_rotum_path %>
-</p>
+  <%= link_to 'New Rota', new_rotum_path %>
+<br><br>Trade a Session:
+<%= link_to image_tag("market.png", alt: "trade session", size: "20") %>
