--- a/app/views/rota/show.html.erb
+++ b/app/views/rota/show.html.erb
@@ -67,5 +67,25 @@
 </table>
 </div>
 
+<!-- <% if logged_in? %>
+  <div class="row">
+    <aside class="col-md-4">
+      <section class="micropost_form">
+        <%= render 'shared/micropost_form' %>
+      </section>
+    </aside>
+  </div>
+<% end %> -->
+
+<div class="col-md-8">
+  <% if @rotum.Microposts.any? %>
+    <h3>Responses (<%= @rotum.Microposts.count %>)</h3>
+    <ol class="microposts">
+      <%= render @microposts %>
+    </ol>
+    <%= will_paginate @microposts %>
+  <% end %>
+</div>
+
 <%= link_to 'Edit', edit_rotum_path(@rotum) %> |
 <%= link_to 'Back', rota_path %>
