--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -1,6 +1,7 @@
+
+
 <li id="micropost-<%= micropost.id %>">
   <span class="content"><%= micropost.content %></span>
-  <span class="timestamp">
-    Posted <%= time_ago_in_words(micropost.created_at) %> ago.
+  <span class="timestamp">Posted <%= time_ago_in_words(micropost.created_at) %> ago.
   </span>
 </li>
