--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -213,6 +213,8 @@ input {
     padding-top: 0;
   }
   .content {
+    background: lightgray;
+    border-radius: 5px;
     display: block;
     margin-left: 60px;
     img {
