--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -1,7 +1,9 @@
 
 
 <li id="micropost-<%= micropost.id %>">
+  <span class="user">Posted by: <%= micropost.doctor.name if micropost.doctor %></span>
   <span class="content"><%= micropost.content %></span>
   <span class="timestamp">Posted <%= time_ago_in_words(micropost.created_at) %> ago.
+<%= link_to "[Delete]", [@rotum, micropost], method: :delete %>
   </span>
 </li>
