radio buttons and audit

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,6 +19,7 @@
               <li><%= link_to "Doctors", '/doctors' %></li>
               <li><%= link_to "Locations", '/locations' %></li>
               <li><%= link_to "Rota", '/rota' %></li>
+              <li><%= link_to "Audit", '/audits' %></li>
               <li class="divider"></li>
               <li>
                 <%= link_to "Log out", logout_path, method: "delete" %>
