--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -42,5 +42,10 @@
   <%= @doctor.notification_group %>
 </p>
 
+<p>
+  <strong>Admin:</strong>
+  <%= @doctor.admin %>
+</p>
+
 <%= link_to 'Edit', edit_doctor_path(@doctor) %> |
 <%= link_to 'Back', doctors_path %>
