--- a/app/views/rota/edit.html.erb
+++ b/app/views/rota/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing Rota</h1>
 
-<%= render 'form', rotum: @rotum %>
+<%= render 'form0', rotum: @rotum %>
 
 <%= link_to 'Show', @rotum %> |
 <%= link_to 'Back', rota_path %>
