cross rota view

--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -50,7 +50,7 @@ Admin:<%= @current_doctor.admin %>
 </table>
 </div>
 <br>
-<%= link_to 'New Doctor', new_doctor_path %>
+<%= link_to 'New Doctor', new_doctor_path, :class => "btn btn-success" %>
 <br>
 <p>
 
