--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -29,4 +29,4 @@ Admin:<%= @current_doctor.admin %>
 
 <br>
 
-<%= link_to 'New Location', new_location_path %>
+<%= link_to 'New Location', new_location_path,  :class => "btn btn-success" %>
