--- a/app/views/rota/index.html.erb
+++ b/app/views/rota/index.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 <h1>Rota Overview</h1>
-I am <%= @current_doctor.name %><br>
-Admin <%= @current_doctor.admin %>
+<!-- I am <%= @current_doctor.name %><br> -->
+<!-- Admin <%= @current_doctor.admin %> -->
 <%= week_calendar number_of_weeks: 2, events: @rota_cal do |date| %>
 
   <span style="color:blue"><%= date.strftime("%d %b %y") %></span>
@@ -10,41 +10,49 @@ Admin <%= @current_doctor.admin %>
     <div>
       <small>
       <% if rotum.Date == date %>
+      <span style="color:blue">
       <B><%= rotum.location.name %></B>
+    </span>
       <br>
+
       <% if rotum.First_on_call_day_trade? %>
       <span style="color:red">
-          <b>*</b>
       <% end %>
-      1stD-<%= rotum.First_on_call_day.name %>
-    </span>
-
-      <br>
-      <% if rotum.First_on_call_nights_trade? %>
-  <span style="color:red">
-      <b>*</b>
+      <% if rotum.First_on_call_day then %>
+      <%=  link_to image_tag("one.png", alt: "first", size: "20") %>
+      <%= rotum.First_on_call_day.name %><br>
       <% end %>
-      1stN-<%= rotum.First_on_call_nights.name %>
-      <% if rotum.First_on_call_nights_trade? %>
-      <b>*</b>
-      <% end %>
-      <br>
     </span>
 
     <% if rotum.Second_on_call_trade? %>
       <span style="color:red">
-    <b>*</b>
     <% end %>
-      2nd-<%= rotum.Second_on_call.name  %>
+    <% if rotum.Second_on_call then %>
+      <%=  link_to image_tag("two.png", alt: "second", size: "20") %>
+      <%= rotum.Second_on_call.name %><br>
+
+      <% end %>
     </span>
-      <br>
+
+      <% if rotum.First_on_call_nights_trade? %>
+  <span style="color:red">
+      <% end %>
+      <% if rotum.First_on_call_nights then %>
+          <%=  link_to image_tag("night.png", alt: "nights", size: "20") %>
+      <%= rotum.First_on_call_nights.name %><br>
+
+      <% end %>
+    </span>
 
       <% if rotum.Consultant_trade? %>
         <span style="color:red">
-      <b>*</b>
       <% end %>
-      C-<%= rotum.Consultant.name  %>
-</span>
+        <% if rotum.Consultant then %>
+        <%=  link_to image_tag("consultant.png", alt: "second", size: "20") %>
+              <%= rotum.Consultant.name %><br>
+
+          <% end %>
+      </span>
 
       <% end %>
      </small>
