--- a/app/views/rota/_form0.html.erb
+++ b/app/views/rota/_form0.html.erb
@@ -28,7 +28,7 @@
   <th><%= label_tag(:First_on_call_day_trade, "Propose trade") %></th>
   <th><%= label_tag(:First_on_call_day_trade, "Do not trade") %></th>
 </tr><tr>
-<td><%= f.collection_select(:First_on_call_day_id, Doctor.all, :id, :name,{}, {:style => "width:300px"}) %></td>
+<td><%= f.collection_select(:First_on_call_day_id, Doctor.all, :id, :name,{:include_blank => true}, {:style => "width:300px"}) %></td>
 <td><%= f.radio_button :First_on_call_day_trade, 'true' %></td>
 <td><%= f.radio_button :First_on_call_day_trade, 'false' %></td>
 <tr>
@@ -40,7 +40,7 @@
   <th><%= label_tag(:First_on_call_nights_trade, "Propose trade") %></th>
   <th><%= label_tag(:First_on_call_nights_trade, "Do not trade") %></th>
 </tr><tr>
-<td><%= f.collection_select(:First_on_call_nights_id, Doctor.all, :id, :name,{}, {:style => "width:300px"}) %></td>
+<td><%= f.collection_select(:First_on_call_nights_id, Doctor.all, :id, :name,{:include_blank => true}, {:style => "width:300px"}) %></td>
 <td><%= f.radio_button :First_on_call_nights_trade, 'true' %></td>
 <td><%= f.radio_button :First_on_call_nights_trade, 'false' %></td>
 <tr>
@@ -63,7 +63,7 @@
     <th><%= label_tag(:Second_on_call_trade, "Propose trade") %></th>
     <th><%= label_tag(:Second_on_call_trade, "Do not trade") %></th>
   </tr><tr>
-  <td><%= f.collection_select(:Second_on_call_id, Doctor.all, :id, :name,{}, {:style => "width:300px"}) %></td>
+  <td><%= f.collection_select(:Second_on_call_id, Doctor.all, :id, :name,{:include_blank => true}, {:style => "width:300px"}) %></td>
   <td><%= f.radio_button :Second_on_call_trade, 'true' %></td>
   <td><%= f.radio_button :Second_on_call_trade, 'false' %></td>
   <tr>
@@ -83,7 +83,7 @@
     <th><%= label_tag(:Consultant_trade, "Do not trade") %></th>
   </tr><tr>
     <td>
-<%= f.collection_select(:Consultant_id, Doctor.where('consultant = ?',true), :id, :name,{}, {:style => "width:300px"}) %></td>
+<%= f.collection_select(:Consultant_id, Doctor.where('consultant = ?',true), :id, :name,{:include_blank => true}, {:style => "width:300px"}) %></td>
   <td><%= f.radio_button :Consultant_trade, 'true' %></td>
   <td><%= f.radio_button :Consultant_trade, 'false' %></td>
   <tr>
